@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.418 2009-02-13 19:07:42 guru Exp $
+	$Id: ChangeLog,v 1.419 2009-02-13 21:13:02 guru Exp $
 -----------------------------------------------------------------------------------------
 -----------------------------------------------------------------------------------------
 2009-02-15
@@ -7,6 +7,8 @@
 -----------------------------------------------------------------------------------------
 2009-02-14	pwessel
 	* x2sys/x2sys_init.c:	Failed to set units/method defaults if -G was set and no -C/N specified.
+	* x2sys/*.c:		Use =list rather than :list to specify a list with tracks (as in mgd77)
+				[but keep processing :list also for backwards compatibility]
 
 2009-02-13	pwessel
 	* website/*:		Scripts and makefile modified to deal with new arrangement
